fixed problem where nav menu didn't show up when on a screen with width greater than 999px, this is done by going into desktop style media query and adding a nav ruleset, setting position to static, removing any transformations by setting transform to none, and setting height to auto and added gap to 2em for spacing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -358,9 +358,14 @@ input[type="email"]:valid {
 @media screen and (min-width: 1000px) {
 
   /* applies to screens wider than 999px */
+
   nav {
     flex-direction: row;
-    justify-content: space-evenly;
+    transform: none;
+    opacity: 1;
+    position: static;
+    height: auto;
+    gap: 2em;
   }
 
   #menuToggler {
@@ -368,9 +373,10 @@ input[type="email"]:valid {
   }
 
   nav a {
+    text-align: center;
     font-size: 1rem;
-    padding: 0.8em 6em;
     border-radius: 1em;
+    padding: 1em 0em;
   }
 
   .imagesOfFilms img {
